# smbx38a-ext-launcher

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  smbx-enginex.code-workspace  smbx-enginex.sln
detours/: CMakeLists.txt
engine-extension/: CMakeLists.txt  d3d9DevWrapper.cpp  d3d9Wrapper.cpp  d3d9Wrapper.h  d3dHook.cpp  dllmain.cpp  engine-extension.vcxproj  engine-extension.vcxproj.filters  event.h  getMessageHook.cpp  hook.cpp  logger.cpp  logger.h  main.cpp  msgBoxHook.cpp  pixel.hlsl  quad.cpp  quad.h  render.cpp  render.h  renderDevice.cpp  renderInit.h  renderInternalDef.h  renderResource.cpp  resource.h  showWindowHook.cpp  showWindowHook.h  smbxContext.cpp  smbxContext.h  staticEventMgr.cpp  staticEventMgr.hpp  strUtil.cpp  timeMgr.cpp  uuidGen.cpp  vertex.hlsl  winapiUtil.cpp  winapiUtil.h  window.cpp  window.h
engine-extension/dllBase/: dllmain.cpp
engine-extension/hook/: getMessageHook.cpp  getMessageHook.h  hook.cpp  hook.h  msgBoxHook.cpp  msgBoxHook.h  showWindowHook.cpp  showWindowHook.h
engine-extension/hook/d3d9/: d3d9DevWrapper.cpp  d3d9DevWrapper.h  d3d9Wrapper.cpp  d3d9Wrapper.h  d3dHook.cpp  d3dHook.h
engine-extension/render/: render.cpp  render.h  renderDevice.cpp  renderInit.h  renderInternalDef.h  renderResource.cpp
engine-extension/render/drawable/: quad.cpp  quad.h  vertex.h
engine-extension/render/shaders/: CMakeLists.txt
engine-extension/shaders/: pixel.hlsl  vertex.hlsl
engine-extension/smbx/: smbxContext.cpp  smbxContext.h  smbxNotify.cpp  smbxNotify.h
engine-extension/util/: logger.cpp  logger.h  staticEventMgr.cpp  staticEventMgr.hpp  strUtil.cpp  strUtil.h  timeMgr.cpp  timeMgr.h  uuidGen.cpp  uuidGen.h  winapiUtil.cpp  winapiUtil.h
engine-extension/util/events/: event.h
engine-extension/wnd/: window.cpp  window.h
main/: CMakeLists.txt  main.cpp  main.rc  main.vcxproj  main.vcxproj.filters  passport.h  resource.h
redirection/: CMakeLists.txt  dllmain.cpp  redirection.vcxproj  redirection.vcxproj.filters
template/assets/game/: main
template/assets/shaders/: pixel.cso  vertex.cso
